k8s/nodejs-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  selector:
    app: nodejs-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000       # Service port
      targetPort: 3000 # Container port
