k8s/nodejs-ingrress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
spec:
  selector:
    app: nodejs-app
  type: ClusterIP   # ✅ changed
  ports:
    - protocol: TCP
      port: 80        # ✅ changed (service port)
      targetPort: 3000  # your app port (no change)
